<resources>
    <string name="app_name">World Time Alarm</string>
    <string name="main_label">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="current_time_zone">Current time zone</string>
    <string name="set_time_zone">Set time zone</string>
    <string name="space">&#160;</string>
    <string name="test">test</string>
    <string name="hint">Los Angeles, Seoul, etc&#8230;</string>
    <string name="search_title">Search</string>
    <string name="wiki_link">https://github.com/Hot6ix/WorldTimeAlarm/wiki/Wiki-(English)</string>
    <string name="help_link">https://github.com/Hot6ix/WorldTimeAlarm/wiki/Help</string>
    <string name="change_log_link">https://github.com/Hot6ix/WorldTimeAlarm/wiki/Patch-Note</string>
    <string name="default_notification_channel">Notice</string>
    <string name="alarm_notification_channel">Alarm</string>
    <string name="missed_notification_channel">Missed Alarm</string>
    <string name="expired_notification_channel">Expired Alarm</string>
    <string name="alarm_empty">Empty</string>
    <string name="clock_empty">Empty</string>
    <string name="no_result">No Result</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="turn_off">Turn Off</string>
    <string name="select_timezone">Time zone</string>
    <string name="select_ringtone">Ringtone</string>
    <string name="select_vibration">Vibration</string>
    <string name="select_snooze">Snooze</string>
    <string name="no_ringtone">No Ringtone</string>
    <string name="no_vibrator">No Vibration</string>
    <string name="no_set">Not set</string>
    <string name="timezone">Time zone</string>
    <string name="label">Label</string>
    <string name="slow">slow</string>
    <string name="fast">fast</string>
    <string name="hour_minutes">%1$d hour %2$d minutes&#160;</string>
    <string name="hours_minutes">%1$d hours %2$d minutes&#160;</string>
    <string name="hour">%1$d hour&#160;</string>
    <string name="hours">%1$d hours&#160;</string>
    <string name="minute">%1$d minute</string>
    <string name="minutes">%1$d minutes</string>
    <string name="day">%1$d day&#160;</string>
    <string name="days">%1$d days&#160;</string>
    <string name="year">%1$d year&#160;</string>
    <string name="years">%1$d years&#160;</string>
    <string name="weekend">Weekend</string>
    <string name="weekday">Weekdays</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="everyday">Everyday</string>
    <string name="everyday_within_period">Everyday within period</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="undo">Undo</string>
    <string name="alarm">Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_fired_title">Alarm</string>
    <string name="unmute">Unmute</string>
    <string name="missed_alarm">Missed Alarm</string>
    <string name="missed_and_last_alarm">Missed Last Alarm</string>
    <string name="select_color">Select Color</string>
    <string name="not_selected">Not selected</string>
    <string name="clear">Clear</string>
    <string name="new_alarm_long">New Alarm</string>
    <string name="new_alarm_short">New Alarm</string>
    <string name="modify_alarm">Modify Alarm</string>
    <string name="expected_time">Alarm will be fired at &#160;%1$s in local time.</string>
    <string name="range_start">Start/Reservation Date</string>
    <string name="range_end">End Date</string>
    <string name="range_not_set">Not set</string>
    <string name="range_text">%1$s (%2$s) ~ %3$s (%4$s)</string>
    <string name="range_until">Until %1$s</string>
    <string name="range_begin">From %1$s</string>
    <string name="one_time_alarm">%1$s (%2$s)</string>
    <string name="last_alarm">Last alarm</string>
    <string name="last_alarm_with_time">%1$s - Last alarm</string>
    <string name="my_ringtone">My ringtone</string>
    <string name="system_ringtone">System ringtone</string>
    <string name="add_new">Add new</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
    <string name="world_clock">Time conversion</string>
    <string name="date">Date</string>
    <string name="reset">Revert to default</string>
    <string name="apply">Apply</string>
    <string name="set_to_system_time_zone">Reset</string>
    <string name="time_zone_with_diff">%1$s (%2$s)</string>
    <string name="change_log">Change log</string>
    <string name="change">Change</string>
    <string name="revoke">Revoke</string>
    <string name="detail">More</string>
    <string name="retry">Retry</string>
    <string name="alarm_removed">Alarm has been removed.</string>
    <string name="clock_removed">Time zone (%1$s) has been removed.</string>
    <string name="less_than_a_minute">less than a minute</string>
    <string name="same_as_current">Same as device time zone</string>
    <string name="same_as_set">Same as set time zone</string>
    <string name="alarm_on">Alarm will be fired after %1$s from now.</string>
    <string name="alarm_on_repeat">Alarm will be fired every %1$s at %2$s.</string>
    <string name="alarm_on_repeat_every">Alarm will be fired everyday at %1$s.</string>
    <string name="alarm_dismissed">Alarm has been dismissed.</string>
    <string name="volume_is_muted">Alarm volume is muted.</string>
    <string name="exist_timezone">Selected time zone is already added in the list.</string>
    <string name="start_date_removed">Start date has been removed.</string>
    <string name="start_date_and_time_is_wrong">Start date should not be earlier than now.</string>
    <string name="end_date_removed">End date has been removed.</string>
    <string name="end_date_earlier_than_today">End date should be later than now.</string>
    <string name="end_date_earlier_than_start_date">End date should be later than start date.</string>
    <string name="must_check_repeat">Repeats should be checked at least one.</string>
    <string name="invalid_repeat">Please check start date and end date.</string>
    <string name="unreachable_alarm">Could not create an alarm. Please check setting.</string>
    <string name="alarm_no_long_fires">Alarm (%1$s) won\'t be fired anymore.</string>
    <string name="error_occurred">Error occurred.</string>
    <string name="error_message">Invalid call. If you keep seeing this error, please re-create alarm. Sorry for inconvenience.</string>
    <string name="exist_ringtone">Selected ringtone is already added in the list.</string>
    <string name="unable_to_create_alarm">Unable to create alarm. Please try again later.</string>
    <string name="confirm_before_change">Confirm before change</string>
    <string name="v22_time_set_message_change">Due to summer time support, time and repeat of %1$d alarm(s) will be changed. The scheduled date and time won\'t change immediately, but will take effect from next. Click here to see the affected alarms.</string>
    <string name="v22_time_set_message">Due to summer time support, Alarm schedule method has been changed. The scheduled date and time won\'t be changed immediately, but will take effect from next. For more information, please click Visit Wiki in settings.</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="v22_change_dialog_title">Change Notice</string>
    <string name="v22_change_dialog_message">Before change\n%1$s\n\nAfter change\n%2$s\n\nTo apply immediately, click Apply Changes in notification.</string>
    <string name="eu_consent">Please open app to review Google EU User Consent Policy.</string>
    <string name="eea_update_message">The change wil be applied next app launch.</string>
    <string name="scheduling_error_title">Alarm scheduling failed</string>
    <string name="scheduling_error_message">An error occurred while scheduling alarm.</string>
    <string name="snooze_scheduling_error_title">Snooze alarm scheduling failed</string>
    <string name="snooze_scheduling_error_message">An error occurred while scheduling snooze alarm.</string>
    <string name="wakeup_permission_error_title">Could not start alarm alert</string>
    <string name="wakeup_permission_error_message">App failed to start alarm alert due to lost its permission. Click here to check app permission.</string>
    <string name="wakeup_error_message">App failed to start alarm alert.</string>
    <string name="timezone_fragment_title">Select time zone</string>
    <string name="timezone_fragment_country_title">Region</string>
    <string name="timezone_fragment_time_zone_title">Time zone</string>
    <string name="timezone_country">Region</string>
    <string name="timezone_region">Time zone</string>
    <string name="timezone_format">%1$s (%2$s)</string>
    <string name="time_zone_search_hint">Search region</string>
    <string name="time_zone_unknown">Unknown time zone</string>
    <string name="time_zone_empty">Click to select time zone</string>
    <string name="time_zone_add">Add</string>
    <string name="time_zone_select">Please select time zone</string>
    <string name="time_zone_wrong">Wrong time zone</string>
    <string name="time_zone_change_info">Changes from %1$s to %2$s.</string>
    <string name="time_zone_change_warning">Changing the time zone affects the following items.\n- Time\n- Date (includes start/end date)\n- Repeat days (Activate in the setting tab)</string>
    <string name="time_zone_dst_end_msg">%1$s is in Summer Time. It ends on %2$s.</string>
    <string name="time_zone_dst_start_msg">%1$s uses Summer Time, but not in it now. It starts on %2$s.</string>
    <string name="time_zone_no_dst_msg">%1$s doesn\'t use Daylight Saving Time.</string>
    <string name="setting_group_0_key">GENERAL</string>
    <string name="setting_group_0">General</string>
    <string name="setting_time_zone_selector_key">TIME_ZONE_SELECTOR_KEY</string>
    <string name="setting_time_zone_selector_title">Select time zone by</string>
    <string name="setting_converter_goto_key">CONVERTER_GOTO</string>
    <string name="setting_converter_goto">Change date and time</string>
    <string name="setting_24_hr_clock_key">ENABLE_24_HOUR_CLOCK</string>
    <string name="setting_24_hr_clock_title">Enable 24 hour clock</string>
    <string name="setting_group_1_key">ALARM</string>
    <string name="setting_group_1">Alarm</string>
    <string name="setting_alarm_mute_key">ALARM_MUTE_KEY</string>
    <string name="setting_alarm_mute_title">Silence after</string>
    <string name="setting_alarm_volume_key">ALARM_VOLUME_KEY</string>
    <string name="setting_alarm_volume_title">Alarm Volume</string>
    <string name="setting_alarm_volume_increase_key">ALARM_INCREASE_KEY</string>
    <string name="setting_alarm_volume_increase_title">Gradually increase volume</string>
    <string name="setting_group_2_key">CONVERTER</string>
    <string name="setting_group_2">Time Conversion</string>
    <string name="setting_converter_remember_last_key">REMEMBER</string>
    <string name="setting_converter_remember_last">Remember last settings</string>
    <string name="setting_group_3">Others</string>
    <string name="setting_help_key">HELP</string>
    <string name="setting_help_title">Visit Wiki</string>
    <string name="setting_version_key">VERSION</string>
    <string name="setting_version_title">Version</string>
    <string name="setting_license_key">LICENSE</string>
    <string name="setting_license_title">Open Source License</string>
    <string name="setting_privacy_policy_key">PRIVACY</string>
    <string name="setting_privacy_policy_title">Privacy Policy</string>
    <string name="setting_source_key">GITHUB</string>
    <string name="setting_source_title">Visit GitHub</string>
</resources>