<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simples.j.worldtimealarm.AlarmActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/decide_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding20"
            android:paddingEnd="@dimen/padding20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/time_zone_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding20"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/time_zone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_middle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:gravity="start"
                        android:ellipsize="end"
                        android:maxLines="1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_zone_offset"/>

                    <TextView
                        android:id="@+id/time_zone_offset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="?attr/colorAccent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_marginStart="@dimen/padding10"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/date_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding20"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/time_zone_view">

                    <TextView
                        android:id="@+id/date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/text_middle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:gravity="start"
                        android:ellipsize="end"
                        android:maxLines="1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small"
                        android:textColor="?attr/colorAccent"
                        android:gravity="end"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="2018년 1월 14일 - 2020년 2월 20일"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/date_picker"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    app:layout_constraintTop_toBottomOf="@id/date_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/expectedTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding20"
                    android:paddingBottom="@dimen/padding20"
                    android:gravity="center"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/time_picker"
                    app:layout_constraintStart_toStartOf="@drawable/ic_dashboard_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/repeat_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time_picker_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alarm_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/repeat_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/decide_view"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/alarm_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/alarm_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
